mb/jb/esh fixed tiny overflow nit picky thing with the twitter div styling in css

--- a/public/stylesheets/jquery.twitter.css
+++ b/public/stylesheets/jquery.twitter.css
@@ -1,3 +1,7 @@
+#twitter {
+	overflow: hidden;	
+}
+
 .twitted {
 	width: 16em;
 	margin-bottom: 1.5em;
